Set database configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=actions
+
+spring.datasource.url=jdbc:h2:mem:
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=none
